// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BulkArchiveClassesBanner when it is July-September should render null when no classes are older than three months 1`] = `
<BulkArchiveClassesBanner
  classes={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": 1565780518135,
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": 1565780518135,
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": 1565780518135,
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": 1565780518135,
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": 1565780518135,
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": 1565780518135,
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  userId={1}
/>
`;

exports[`BulkArchiveClassesBanner when it is July-September should render null when the teacher has already closed it for this school year 1`] = `
<BulkArchiveClassesBanner
  classes={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2018-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2018-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2018-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2018-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2018-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2018-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  userId={1}
/>
`;

exports[`BulkArchiveClassesBanner when it is July-September should render when none of the above conditions are met 1`] = `
<BulkArchiveClassesBanner
  classes={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2018-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2018-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2018-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2018-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2018-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2018-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  userId={1}
>
  <section
    className="bulk-archive-classes-banner"
  >
    <span>
      <strong>
        Start of a new school year?
      </strong>
       Quickly archive last year’s classes.
    </span>
    <span>
      <button
        className="quill-button medium outlined secondary"
        onClick={[Function]}
        type="button"
      >
        Archive classes
      </button>
      <button
        className="pass-through-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="X icon"
          src="undefined/images/icons/close.svg"
        />
      </button>
    </span>
  </section>
</BulkArchiveClassesBanner>
`;

exports[`BulkArchiveClassesBanner when it is July-September should render when none of the above conditions are met and the Archive Classes button is clicked 1`] = `
<BulkArchiveClassesBanner
  classes={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2018-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2018-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2018-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2018-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2018-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2018-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  userId={1}
>
  <BulkArchiveClassesModal
    classes={
      Array [
        Object {
          "activity_count": 0,
          "clever_id": null,
          "code": "demo-6553451",
          "created_at": "2018-08-17 14:26:06.140275",
          "google_classroom_id": null,
          "grade": "9",
          "has_coteacher": false,
          "id": "484134",
          "name": "Quill Classroom Extremely Long So Long SUper Duper",
          "student_count": "5",
          "teacher_role": "owner",
        },
        Object {
          "activity_count": 0,
          "clever_id": null,
          "code": "van-guitar",
          "created_at": "2018-04-26 15:26:05.306719",
          "google_classroom_id": null,
          "grade": "6",
          "has_coteacher": false,
          "id": "484135",
          "name": "A New Class",
          "student_count": "0",
          "teacher_role": "owner",
        },
        Object {
          "activity_count": 0,
          "clever_id": null,
          "code": "writer-menu",
          "created_at": "2018-08-26 19:16:43.07067",
          "google_classroom_id": null,
          "grade": "Other",
          "has_coteacher": false,
          "id": "484137",
          "name": "2",
          "student_count": "0",
          "teacher_role": "owner",
        },
        Object {
          "activity_count": 0,
          "clever_id": null,
          "code": "cheese-ideal",
          "created_at": "2018-08-26 19:16:54.839985",
          "google_classroom_id": null,
          "grade": "Other",
          "has_coteacher": false,
          "id": "484139",
          "name": "4",
          "student_count": "0",
          "teacher_role": "owner",
        },
        Object {
          "activity_count": 0,
          "clever_id": null,
          "code": "poetry-stitch",
          "created_at": "2018-08-26 19:45:54.813954",
          "google_classroom_id": null,
          "grade": "5",
          "has_coteacher": false,
          "id": "484148",
          "name": "13",
          "student_count": "0",
          "teacher_role": "owner",
        },
        Object {
          "activity_count": 0,
          "clever_id": null,
          "code": "dogs-fruit",
          "created_at": "2018-08-26 19:46:05.060615",
          "google_classroom_id": null,
          "grade": "5",
          "has_coteacher": false,
          "id": "484150",
          "name": "15",
          "student_count": "0",
          "teacher_role": "owner",
        },
      ]
    }
    onCloseModal={[Function]}
  >
    <div
      className="modal-container bulk-archive-classes-modal-container"
    >
      <div
        className="modal-background"
      />
      <div
        className="bulk-archive-classes-modal quill-modal"
      >
        <div
          className="bulk-archive-classes-modal-header"
        >
          <h3
            className="title"
          >
            Choose classes to archive
          </h3>
          <p>
            If you archive classes, students in those classes will no longer be able to access activities. You can view archived classes under the "Classes" tab.
          </p>
          <a
            href="https://support.quill.org/en/articles/4177342-how-to-archive-classes-tips-and-tricks"
          >
            Learn more about archiving classes
          </a>
        </div>
        <div
          className="bulk-archive-classes-modal-body modal-body"
        >
          <ModalContent
            classes={
              Array [
                Object {
                  "activity_count": 0,
                  "clever_id": null,
                  "code": "demo-6553451",
                  "created_at": "2018-08-17 14:26:06.140275",
                  "google_classroom_id": null,
                  "grade": "9",
                  "has_coteacher": false,
                  "id": "484134",
                  "name": "Quill Classroom Extremely Long So Long SUper Duper",
                  "student_count": "5",
                  "teacher_role": "owner",
                },
                Object {
                  "activity_count": 0,
                  "clever_id": null,
                  "code": "van-guitar",
                  "created_at": "2018-04-26 15:26:05.306719",
                  "google_classroom_id": null,
                  "grade": "6",
                  "has_coteacher": false,
                  "id": "484135",
                  "name": "A New Class",
                  "student_count": "0",
                  "teacher_role": "owner",
                },
                Object {
                  "activity_count": 0,
                  "clever_id": null,
                  "code": "writer-menu",
                  "created_at": "2018-08-26 19:16:43.07067",
                  "google_classroom_id": null,
                  "grade": "Other",
                  "has_coteacher": false,
                  "id": "484137",
                  "name": "2",
                  "student_count": "0",
                  "teacher_role": "owner",
                },
                Object {
                  "activity_count": 0,
                  "clever_id": null,
                  "code": "cheese-ideal",
                  "created_at": "2018-08-26 19:16:54.839985",
                  "google_classroom_id": null,
                  "grade": "Other",
                  "has_coteacher": false,
                  "id": "484139",
                  "name": "4",
                  "student_count": "0",
                  "teacher_role": "owner",
                },
                Object {
                  "activity_count": 0,
                  "clever_id": null,
                  "code": "poetry-stitch",
                  "created_at": "2018-08-26 19:45:54.813954",
                  "google_classroom_id": null,
                  "grade": "5",
                  "has_coteacher": false,
                  "id": "484148",
                  "name": "13",
                  "student_count": "0",
                  "teacher_role": "owner",
                },
                Object {
                  "activity_count": 0,
                  "clever_id": null,
                  "code": "dogs-fruit",
                  "created_at": "2018-08-26 19:46:05.060615",
                  "google_classroom_id": null,
                  "grade": "5",
                  "has_coteacher": false,
                  "id": "484150",
                  "name": "15",
                  "student_count": "0",
                  "teacher_role": "owner",
                },
              ]
            }
            selectedClassroomIds={Array []}
            setSelectedClassroomIds={[Function]}
          >
            <DataTable
              averageFontWidth={7}
              checkAllRows={[Function]}
              checkRow={[Function]}
              headers={
                Array [
                  Object {
                    "attribute": "name",
                    "name": "Class",
                    "width": "530px",
                  },
                  Object {
                    "attribute": "grade",
                    "name": "Grade",
                    "width": "64px",
                  },
                  Object {
                    "attribute": "created",
                    "name": "Created",
                    "width": "88px",
                  },
                  Object {
                    "attribute": "students",
                    "headerClassName": "students-header",
                    "name": "Students",
                    "rowSectionClassName": "students-row-section",
                    "width": "51px",
                  },
                ]
              }
              rows={
                Array [
                  Object {
                    "checked": false,
                    "created": "Aug 17, 2018",
                    "grade": "9th",
                    "id": "484134",
                    "name": "Quill Classroom Extremely Long So Long SUper Duper",
                    "students": "5",
                  },
                  Object {
                    "checked": false,
                    "created": "Apr 26, 2018",
                    "grade": "6th",
                    "id": "484135",
                    "name": "A New Class",
                    "students": "0",
                  },
                  Object {
                    "checked": false,
                    "created": "Aug 26, 2018",
                    "grade": "Other",
                    "id": "484137",
                    "name": "2",
                    "students": "0",
                  },
                  Object {
                    "checked": false,
                    "created": "Aug 26, 2018",
                    "grade": "Other",
                    "id": "484139",
                    "name": "4",
                    "students": "0",
                  },
                  Object {
                    "checked": false,
                    "created": "Aug 26, 2018",
                    "grade": "5th",
                    "id": "484148",
                    "name": "13",
                    "students": "0",
                  },
                  Object {
                    "checked": false,
                    "created": "Aug 26, 2018",
                    "grade": "5th",
                    "id": "484150",
                    "name": "15",
                    "students": "0",
                  },
                ]
              }
              showCheckboxes={true}
              uncheckAllRows={[Function]}
              uncheckRow={[Function]}
            >
              <div
                className="data-table undefined"
              >
                <div
                  className="data-table-headers"
                >
                  <button
                    aria-label="Unchecked checkbox"
                    className="quill-checkbox unselected data-table-header"
                    onClick={[Function]}
                    type="button"
                  />
                  <button
                    className="data-table-header undefined"
                    style={
                      Object {
                        "minWidth": "530px",
                        "textAlign": "left",
                        "width": "530px",
                      }
                    }
                    tabIndex={-1}
                    type="button"
                  >
                    Class
                  </button>
                  <button
                    className="data-table-header undefined"
                    style={
                      Object {
                        "minWidth": "64px",
                        "textAlign": "left",
                        "width": "64px",
                      }
                    }
                    tabIndex={-1}
                    type="button"
                  >
                    Grade
                  </button>
                  <button
                    className="data-table-header undefined"
                    style={
                      Object {
                        "minWidth": "88px",
                        "textAlign": "left",
                        "width": "88px",
                      }
                    }
                    tabIndex={-1}
                    type="button"
                  >
                    Created
                  </button>
                  <button
                    className="data-table-header students-header"
                    style={
                      Object {
                        "minWidth": "51px",
                        "textAlign": "right",
                        "width": "51px",
                      }
                    }
                    tabIndex={-1}
                    type="button"
                  >
                    Students
                  </button>
                </div>
                <div
                  className="data-table-body"
                >
                  <div
                    className="data-table-row  "
                    key="484134"
                  >
                    <button
                      aria-label="Unchecked checkbox"
                      className="quill-checkbox unselected data-table-row-section"
                      onClick={[Function]}
                      type="button"
                    />
                    <span
                      className="data-table-row-section undefined"
                      key="name-484134"
                      style={
                        Object {
                          "minWidth": "530px",
                          "textAlign": "left",
                          "width": "530px",
                        }
                      }
                    >
                      Quill Classroom Extremely Long So Long SUper Duper
                    </span>
                    <span
                      className="data-table-row-section undefined"
                      key="grade-484134"
                      style={
                        Object {
                          "minWidth": "64px",
                          "textAlign": "left",
                          "width": "64px",
                        }
                      }
                    >
                      9th
                    </span>
                    <span
                      className="data-table-row-section undefined"
                      key="created-484134"
                      style={
                        Object {
                          "minWidth": "88px",
                          "textAlign": "left",
                          "width": "88px",
                        }
                      }
                    >
                      Aug 17, 2018
                    </span>
                    <span
                      className="data-table-row-section students-row-section"
                      key="students-484134"
                      style={
                        Object {
                          "minWidth": "51px",
                          "textAlign": "right",
                          "width": "51px",
                        }
                      }
                    >
                      5
                    </span>
                    <span
                      className="removable data-table-row-section"
                    />
                  </div>
                  <div
                    className="data-table-row  "
                    key="484135"
                  >
                    <button
                      aria-label="Unchecked checkbox"
                      className="quill-checkbox unselected data-table-row-section"
                      onClick={[Function]}
                      type="button"
                    />
                    <span
                      className="data-table-row-section undefined"
                      key="name-484135"
                      style={
                        Object {
                          "minWidth": "530px",
                          "textAlign": "left",
                          "width": "530px",
                        }
                      }
                    >
                      A New Class
                    </span>
                    <span
                      className="data-table-row-section undefined"
                      key="grade-484135"
                      style={
                        Object {
                          "minWidth": "64px",
                          "textAlign": "left",
                          "width": "64px",
                        }
                      }
                    >
                      6th
                    </span>
                    <span
                      className="data-table-row-section undefined"
                      key="created-484135"
                      style={
                        Object {
                          "minWidth": "88px",
                          "textAlign": "left",
                          "width": "88px",
                        }
                      }
                    >
                      Apr 26, 2018
                    </span>
                    <span
                      className="data-table-row-section students-row-section"
                      key="students-484135"
                      style={
                        Object {
                          "minWidth": "51px",
                          "textAlign": "right",
                          "width": "51px",
                        }
                      }
                    >
                      0
                    </span>
                    <span
                      className="removable data-table-row-section"
                    />
                  </div>
                  <div
                    className="data-table-row  "
                    key="484137"
                  >
                    <button
                      aria-label="Unchecked checkbox"
                      className="quill-checkbox unselected data-table-row-section"
                      onClick={[Function]}
                      type="button"
                    />
                    <span
                      className="data-table-row-section undefined"
                      key="name-484137"
                      style={
                        Object {
                          "minWidth": "530px",
                          "textAlign": "left",
                          "width": "530px",
                        }
                      }
                    >
                      2
                    </span>
                    <span
                      className="data-table-row-section undefined"
                      key="grade-484137"
                      style={
                        Object {
                          "minWidth": "64px",
                          "textAlign": "left",
                          "width": "64px",
                        }
                      }
                    >
                      Other
                    </span>
                    <span
                      className="data-table-row-section undefined"
                      key="created-484137"
                      style={
                        Object {
                          "minWidth": "88px",
                          "textAlign": "left",
                          "width": "88px",
                        }
                      }
                    >
                      Aug 26, 2018
                    </span>
                    <span
                      className="data-table-row-section students-row-section"
                      key="students-484137"
                      style={
                        Object {
                          "minWidth": "51px",
                          "textAlign": "right",
                          "width": "51px",
                        }
                      }
                    >
                      0
                    </span>
                    <span
                      className="removable data-table-row-section"
                    />
                  </div>
                  <div
                    className="data-table-row  "
                    key="484139"
                  >
                    <button
                      aria-label="Unchecked checkbox"
                      className="quill-checkbox unselected data-table-row-section"
                      onClick={[Function]}
                      type="button"
                    />
                    <span
                      className="data-table-row-section undefined"
                      key="name-484139"
                      style={
                        Object {
                          "minWidth": "530px",
                          "textAlign": "left",
                          "width": "530px",
                        }
                      }
                    >
                      4
                    </span>
                    <span
                      className="data-table-row-section undefined"
                      key="grade-484139"
                      style={
                        Object {
                          "minWidth": "64px",
                          "textAlign": "left",
                          "width": "64px",
                        }
                      }
                    >
                      Other
                    </span>
                    <span
                      className="data-table-row-section undefined"
                      key="created-484139"
                      style={
                        Object {
                          "minWidth": "88px",
                          "textAlign": "left",
                          "width": "88px",
                        }
                      }
                    >
                      Aug 26, 2018
                    </span>
                    <span
                      className="data-table-row-section students-row-section"
                      key="students-484139"
                      style={
                        Object {
                          "minWidth": "51px",
                          "textAlign": "right",
                          "width": "51px",
                        }
                      }
                    >
                      0
                    </span>
                    <span
                      className="removable data-table-row-section"
                    />
                  </div>
                  <div
                    className="data-table-row  "
                    key="484148"
                  >
                    <button
                      aria-label="Unchecked checkbox"
                      className="quill-checkbox unselected data-table-row-section"
                      onClick={[Function]}
                      type="button"
                    />
                    <span
                      className="data-table-row-section undefined"
                      key="name-484148"
                      style={
                        Object {
                          "minWidth": "530px",
                          "textAlign": "left",
                          "width": "530px",
                        }
                      }
                    >
                      13
                    </span>
                    <span
                      className="data-table-row-section undefined"
                      key="grade-484148"
                      style={
                        Object {
                          "minWidth": "64px",
                          "textAlign": "left",
                          "width": "64px",
                        }
                      }
                    >
                      5th
                    </span>
                    <span
                      className="data-table-row-section undefined"
                      key="created-484148"
                      style={
                        Object {
                          "minWidth": "88px",
                          "textAlign": "left",
                          "width": "88px",
                        }
                      }
                    >
                      Aug 26, 2018
                    </span>
                    <span
                      className="data-table-row-section students-row-section"
                      key="students-484148"
                      style={
                        Object {
                          "minWidth": "51px",
                          "textAlign": "right",
                          "width": "51px",
                        }
                      }
                    >
                      0
                    </span>
                    <span
                      className="removable data-table-row-section"
                    />
                  </div>
                  <div
                    className="data-table-row  "
                    key="484150"
                  >
                    <button
                      aria-label="Unchecked checkbox"
                      className="quill-checkbox unselected data-table-row-section"
                      onClick={[Function]}
                      type="button"
                    />
                    <span
                      className="data-table-row-section undefined"
                      key="name-484150"
                      style={
                        Object {
                          "minWidth": "530px",
                          "textAlign": "left",
                          "width": "530px",
                        }
                      }
                    >
                      15
                    </span>
                    <span
                      className="data-table-row-section undefined"
                      key="grade-484150"
                      style={
                        Object {
                          "minWidth": "64px",
                          "textAlign": "left",
                          "width": "64px",
                        }
                      }
                    >
                      5th
                    </span>
                    <span
                      className="data-table-row-section undefined"
                      key="created-484150"
                      style={
                        Object {
                          "minWidth": "88px",
                          "textAlign": "left",
                          "width": "88px",
                        }
                      }
                    >
                      Aug 26, 2018
                    </span>
                    <span
                      className="data-table-row-section students-row-section"
                      key="students-484150"
                      style={
                        Object {
                          "minWidth": "51px",
                          "textAlign": "right",
                          "width": "51px",
                        }
                      }
                    >
                      0
                    </span>
                    <span
                      className="removable data-table-row-section"
                    />
                  </div>
                </div>
              </div>
            </DataTable>
          </ModalContent>
        </div>
        <div
          className="bulk-archive-classes-modal-footer"
        >
          <div
            className="buttons"
          >
            <button
              className="quill-button outlined secondary medium"
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="quill-button contained primary medium disabled"
              onClick={[Function]}
              type="button"
            >
              Archive
            </button>
          </div>
        </div>
      </div>
    </div>
  </BulkArchiveClassesModal>
  <section
    className="bulk-archive-classes-banner"
  >
    <span>
      <strong>
        Start of a new school year?
      </strong>
       Quickly archive last year’s classes.
    </span>
    <span>
      <button
        className="quill-button medium outlined secondary"
        onClick={[Function]}
        type="button"
      >
        Archive classes
      </button>
      <button
        className="pass-through-button"
        onClick={[Function]}
        type="button"
      >
        <img
          alt="X icon"
          src="undefined/images/icons/close.svg"
        />
      </button>
    </span>
  </section>
</BulkArchiveClassesBanner>
`;

exports[`BulkArchiveClassesBanner when it is not July-September should render null when it is not July-September 1`] = `
<BulkArchiveClassesBanner
  classes={
    Array [
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "demo-6553451",
        "created_at": "2018-08-17 14:26:06.140275",
        "google_classroom_id": null,
        "grade": "9",
        "has_coteacher": false,
        "id": "484134",
        "name": "Quill Classroom Extremely Long So Long SUper Duper",
        "student_count": "5",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "van-guitar",
        "created_at": "2018-04-26 15:26:05.306719",
        "google_classroom_id": null,
        "grade": "6",
        "has_coteacher": false,
        "id": "484135",
        "name": "A New Class",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "writer-menu",
        "created_at": "2018-08-26 19:16:43.07067",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484137",
        "name": "2",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "cheese-ideal",
        "created_at": "2018-08-26 19:16:54.839985",
        "google_classroom_id": null,
        "grade": "Other",
        "has_coteacher": false,
        "id": "484139",
        "name": "4",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "poetry-stitch",
        "created_at": "2018-08-26 19:45:54.813954",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484148",
        "name": "13",
        "student_count": "0",
        "teacher_role": "owner",
      },
      Object {
        "activity_count": 0,
        "clever_id": null,
        "code": "dogs-fruit",
        "created_at": "2018-08-26 19:46:05.060615",
        "google_classroom_id": null,
        "grade": "5",
        "has_coteacher": false,
        "id": "484150",
        "name": "15",
        "student_count": "0",
        "teacher_role": "owner",
      },
    ]
  }
  userId={1}
/>
`;
